<resources>
    <string name="app_name">cse218_fp_exp1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pin">Pins</string>
    <string name="absolute">Absolute</string>
    <string name="add_pin">Add Pin</string>
    <string name="no_pin">No pins saved</string>
    <string name="update_pin">Update Pin</string>

</resources>