<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cse218_fp_exp1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.cse218_fp_exp1.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboard_to_map"
            app:destination="@id/navigation_map" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.cse218_fp_exp1.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications"
    />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.cse218_fp_exp1.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_map_to_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_map_to_pin"
            app:destination="@id/navigation_pin" />
    </fragment>

    <fragment
        android:id="@+id/navigation_pin"
        android:name="com.example.cse218_fp_exp1.ui.pin.PinFragment"
        android:label="@string/pin"
        tools:layout="@layout/fragment_pin"
        />

</navigation>