<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.map.MapFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_first"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            android:contentDescription="@string/title_map"
            />
        <LinearLayout
            android:id="@+id/bottom_buttons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="9"
            android:gravity="center"
            style="?android:attr/buttonBarStyle">


            <Button
                android:id="@+id/button_absolute"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:text="@string/absolute" />
            <Button
                android:id="@+id/button_pin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:text="@string/pin"
                android:backgroundTint="@color/teal_700"
                />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>